--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {  "homepage": "https://salah-aldeen-bitar.github.io/salah",
   "name": "resturant123",
   "version": "0.1.0",
-  "private": true,
+  "private": "true",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
